--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vakil DaD</title>
     <link rel="shortcut icon" href="images/faw2.png" type="image/png">
-
+    <link rel="stylesheet" href="google.com">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/grid.css">
     <link rel="stylesheet" href="style/style.css">
