--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vakil DaD</title>
+    <title>Vakil bede</title>
     <link rel="shortcut icon" href="images/faw2.png" type="image/png">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/grid.css">
