create Basic Forms

--- a/newpanel.html
+++ b/newpanel.html
@@ -39,7 +39,17 @@
                 <span class="template-right__select-rule " id="select-rule-vakil">وکیل</span>
                 <span class="template-right__select-rule" id="select-rule-movakel">موکل</span>
             </div>
+            <form action="" class="vakil-form" id="vakil-form">
+                
+            </form>
+            <form action="" class="movakel-form" id="movakel-form">
+
+            </form>
+            <form action="" class="login-form" id="login-form">
+
+            </form>
         </div>
+        
     </div>
 </body>
 </html>
