update: vakil form inputs

--- a/newpanel.html
+++ b/newpanel.html
@@ -56,11 +56,17 @@
                     <span class="vakil-form__span-for-input"><input placeholder="نام و نام خانوادگی" type="text" id="vakil__name-family" name="vakil__name-family" class="vakil-form__input" required minlength="5" autocomplete="off"></span>
                     <span class="vakil-form__span-for-input"><input placeholder="شماره تماس" title="شماره تلفن خودتان را وارد کنید" type="text" id="vakil__phone" required maxlength="11" class="vakil-form__input" autocomplete="off" name="vakil__phone" pattern="[0-9]{11}"></span>
                     <span class="vakil-form__span-for-input"><input placeholder="ایمیل" title="ایمیل خودتان را وارد کنید" type="email" id="vakil__email" required  class="vakil-form__input" autocomplete="off" name="vakil__email"></span>
+                    <div class="vakil-form__radio-wrapper">
+                        
+                        <input type="radio" id="sex-radio" value="men" name="vakil-sex">
+                        <input type="radio" id="sex-radio" value="women" name="vakil-sex">
+                    </div>
                 </div>
                 <div class="tab">
                     <h2 class="tab__header">اطلاعات وکالتی</h2>
                     <span class="vakil-form__span-for-input"><input placeholder="شماره پروانه وکالت" type="text" id="vakil__parvaneNumber" required maxlength="5" class="vakil-form__input" autocomplete="off" name="vakil__parvane" pattern="[0-9]{5}"></span>
-                    <span class="vakil-form__span-for-input"><select id="vakil__parvaneYear" required class="vakil-form__input" name="vakil__parvaneYear" ></select></span>
+                    <!-- <label for="vakil__parvaneYearss" class="vakil-form__label">سال اخذ پروانه</label> -->
+                    <span class="vakil-form__span-for-input"><select placeholder="سال اخذ پروانه" id="vakil__parvaneYear" required class="vakil-form__input" name="vakil__parvaneYear"><option value="optionParvaneOPtion">سال اخذ پروانه</option></select></span>
                     
                     <!-- <span class="vakil-form__span-for-input"><input placeholder="شماره کارت بانکی" type="text" id="vakil__cardNumber" required maxlength="16" class="vakil-form__input" autocomplete="off" name="vakil__card-number" pattern="[0-9]{11}"></span> -->
                 </div>
