refactor state and city generator

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="style/responsive.css">
 
     <script src="js/app.js" defer></script>
-    <script src="js/stateAndCityLoader.js" defer></script>
+    
 </head>
-<body onload="cityAndStateGenerator(get('state-select'),get('city-select'));">
+<body>
     <header class="header">
         <div class="container">
             <div class="header__mobile-wrapper"> 
@@ -544,5 +544,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/stateAndCityLoader.js" defer></script>
 </body>
 </html>
