--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
             <div class="header-wrapper">
                 <div class="header__btns-wrapper">
-                    <a href="#" class="login-btn header__login-btn"><span class="header__login-btn-text">ورود/ثبت نام</span>
+                    <a href="newpanel.html" class="login-btn header__login-btn"><span class="header__login-btn-text">ورود/ثبت نام</span>
                         <svg class="header__login-icon icon icon-tabler icon-tabler-login" width="30" height="30" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M15 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2" />
@@ -122,7 +122,7 @@
                     <h1 class="main-head__main-title">مرجع تخصصی وکیل یابی</h1>
                     <div class="main-head__button-wrapper">
                         <a href="#services" class="main-head__button main-head__button-bordered">وکیل یابی</a>
-                        <a href="" class="main-head__button login-btn">ورود/ثبت نام</a>
+                        <a href="newpanel.html" class="main-head__button login-btn">ورود/ثبت نام</a>
                     </div>
                 </div>
             </div>
