--- a/index.html
+++ b/index.html
@@ -110,22 +110,22 @@
     </header>
     <main class="main">
         <section class="main-head">
-            <picture class="">
-                <!-- <source media="(min-width: 1200px)" srcset="images/headerPic1.jpg" class="main-head__img"> -->
-                <source media="(min-width: 576px)" srcset="images/headerPic2.jpg" class="main-head__img">
-                <img src="" alt="" class="main-head__img">
-             </picture>
-            
         <div class="container">
-                <div class="main-head-content-wrapper">
-                    <h2 class="main-head__sub-title">وکیل داد,</h2>
-                    <h1 class="main-head__main-title">مرجع تخصصی وکیل یابی</h1>
-                    <div class="main-head__button-wrapper">
-                        <a href="#services" class="main-head__button main-head__button-bordered">وکیل یابی</a>
-                        <a href="" class="main-head__button login-btn">ورود/ثبت نام</a>
-                    </div>
-                </div>
+          <div class="row">
+            <div class="col-5">
+              <div class="main-head__details">
+                <h1 class="main-head__title">وکیل داد, مرجع تخصصی وکیل یابی</h1>
+                <h2 class="main-head__caption">با سایت وکیل داد به آسانی خدمات قضایی دریافت کنید و با وکلای مجرب و متخصص ما ارتباط داشته باشید</h2>
+                <a href="#services" class="main-head__btn">پیدا کردن وکیل</a>
+                <div class="fade-circle main-head__circle"></div>
+              </div>
             </div>
+            
+            <div class="col-6">
+              <img src="images/judgeicons/1.png" alt="" class="main-head__img">
+            </div>
+          </div>
+        </div>
         </section>
         <section class="info-box" id="info-box">
           <div class="container">
