responsive main-head

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <section class="main-head">
         <div class="container">
           <div class="row">
-            <div class="col-5">
+            <div class="col-12 col-md-6 col-lg-5">
               <div class="main-head__details">
                 <h1 class="main-head__title">وکیل داد, مرجع تخصصی وکیل یابی</h1>
                 <h2 class="main-head__caption">با سایت وکیل داد به آسانی خدمات قضایی دریافت کنید و با وکلای مجرب و متخصص ما ارتباط داشته باشید</h2>
@@ -121,7 +121,7 @@
               </div>
             </div>
             
-            <div class="col-6">
+            <div class="col-8 col-md-6 col-lg-6">
               <img src="images/judgeicons/1.png" alt="" class="main-head__img">
             </div>
           </div>
