refactor btn's services btn's , select and text areas

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 
             <div class="header-wrapper">
                 <div class="header__btns-wrapper">
-                    <a href="newpanel.html" class="login-btn header__login-btn"><span class="header__login-btn-text">ورود/ثبت نام</span>
+                    <a href="newpanel.html" class="btn header__login-btn"><span class="header__login-btn-text">ورود/ثبت نام</span>
                         <svg class="header__login-icon icon icon-tabler icon-tabler-login" width="30" height="30" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <path d="M15 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2" />
@@ -143,14 +143,14 @@
         </div>
     </header>
     <main class="main">
-        <section class="main-head">
+        <section class="main-head"> 
         <div class="container">
           <div class="row">
             <div class="col-12 col-md-6 col-lg-5">
               <div class="main-head__details">
                 <h1 class="main-head__title">وکیل داد, مرجع تخصصی وکیل یابی</h1>
                 <h2 class="main-head__caption">با سایت وکیل داد به آسانی خدمات قضایی دریافت کنید و با وکلای مجرب و متخصص ما ارتباط داشته باشید</h2>
-                <a href="#services" class="main-head__btn">پیدا کردن وکیل</a>
+                <a href="#services" class="btn main-head__btn">پیدا کردن وکیل</a>
                 <div class="fade-circle main-head__circle"></div>
               </div>
             </div>
@@ -205,7 +205,7 @@
                         <select name="city" id="city-select" class="services__select-box city-select">
                         </select>
                     </div>
-                    <div class="services__form-submit-btn" id="service1-submit-btn">ارسال</div>
+                    <div class="btn services__form-submit-btn" id="service1-submit-btn">ارسال</div>
                   </form>
                   <form action="" class="find-form">
                     <select name="state" id="state-select" class="find-form__select state-select">
@@ -218,13 +218,13 @@
                         <option value="everyskill">هر تخصصی</option>
                     </select>
                     <input type="text" maxlength="30" placeholder="جستجو در نام..." class="find-form__select">
-                    <div class="services__form-submit-btn" id="services2-submit-btn">جستجو</div>
+                    <div class="btn services__form-submit-btn" id="services2-submit-btn">جستجو</div>
                   </form>
                   <form action="" class="legal-info services-show">
                     <select name="legal-info-select" class="legal-info__select skill-select" id="">
                         <option value="everyskill">هر تخصصی</option>
                     </select>
-                    <div class="services__form-submit-btn">جستجو</div>
+                    <div class="btn services__form-submit-btn">جستجو</div>
                   </form>
                   <div class="fade-circle insert-service-box__circle"></div>
                 </div>
