decerese light mode and add icon to services

--- a/index.html
+++ b/index.html
@@ -47,7 +47,22 @@
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
       <path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" />
     </symbol>
-    <symbol id="arrow-left-icon" height="18px" viewBox="0 -960 960 960" width="18px" fill="currentColor"><path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z"/></symbol>  </svg>
+    <symbol id="arrow-left-icon" height="18px" viewBox="0 -960 960 960" width="18px" fill="currentColor"><path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z"/></symbol>  
+    <symbol id="message-plus-icon" class="icon icon-tabler icon-tabler-message-plus" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+      <path d="M8 9h8" />
+      <path d="M8 13h6" />
+      <path d="M12.01 18.594l-4.01 2.406v-3h-2a3 3 0 0 1 -3 -3v-8a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v5.5" />
+      <path d="M16 19h6" />
+      <path d="M19 16v6" />
+    </symbol>
+    <symbol id="search-icon" class="icon icon-tabler icon-tabler-search" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+      <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
+      <path d="M21 21l-6 -6" />
+    </symbol>
+  </svg>
+    
     <header class="header">
         <div class="container">
             <div class="header__mobile-wrapper"> 
@@ -205,7 +220,7 @@
                         <select name="city" id="city-select" class="services__select-box city-select">
                         </select>
                     </div>
-                    <div class="btn services__form-submit-btn" id="service1-submit-btn">ارسال</div>
+                    <div class="btn services__form-submit-btn" id="service1-submit-btn">ارسال<svg style="width: 24px;height: 24px; margin-right: .5rem;"><use href="#message-plus-icon"></use></svg></div>
                   </form>
                   <form action="" class="find-form">
                     <select name="state" id="state-select" class="find-form__select state-select">
@@ -218,13 +233,13 @@
                         <option value="everyskill">هر تخصصی</option>
                     </select>
                     <input type="text" maxlength="30" placeholder="جستجو در نام..." class="find-form__select">
-                    <div class="btn services__form-submit-btn" id="services2-submit-btn">جستجو</div>
+                    <div class="btn services__form-submit-btn" id="services2-submit-btn">جستجو <svg style="width: 24px;height: 24px; margin-right: .5rem;"><use href="#search-icon"></use></svg></div>
                   </form>
                   <form action="" class="legal-info services-show">
                     <select name="legal-info-select" class="legal-info__select skill-select" id="">
                         <option value="everyskill">هر تخصصی</option>
                     </select>
-                    <div class="btn services__form-submit-btn">جستجو</div>
+                    <div class="btn services__form-submit-btn">جستجو <svg style="width: 24px;height: 24px; margin-right: .5rem;"><use href="#search-icon"></use></svg></div>
                   </form>
                   <div class="fade-circle insert-service-box__circle"></div>
                 </div>
