add some fade circle

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
               <p class="info-box__caption">مشاوره بگیرید و بهترین وکیل در اطراف خود را پیدا کنید</p>
             </div>
             </div>
+            <div class="fade-circle2 info-box__circle"></div>
           </div>
         </section>
         <section class="services" id="services">
